# llm-safecall

./: .env.example  .gitignore  .llm_safecall_cache.pkl  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  policy.yml.example  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
src/llm_safecall/: __init__.py  errors.py  safe_call.py
src/llm_safecall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
