[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-safecall"
version = "0.1.0"
description = "Safely call LLMs with validation, retries, and observability."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = [
  "pydantic>=2.7",
  "tenacity>=9.0",
  "typing-extensions>=4.10"
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.34"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
